// Copyright 2024 Gravitational, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package types;

import "gogoproto/gogo.proto";

option go_package = "github.com/gravitational/teleport/api/types";
option (gogoproto.goproto_getters_all) = false;
option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;

// TrustedDeviceRequirement indicates whether access may be hindered by the lack
// of a trusted device.
enum TrustedDeviceRequirement {
  // Device requirement not determined.
  // Does not mean that a device is not required, only that the necessary data
  // was not considered.
  TRUSTED_DEVICE_REQUIREMENT_UNSPECIFIED = 0;
  // Trusted device not required.
  TRUSTED_DEVICE_REQUIREMENT_NOT_REQUIRED = 1;
  // Trusted device required by either cluster mode or user roles.
  TRUSTED_DEVICE_REQUIREMENT_REQUIRED = 2;
}
